[gd_scene load_steps=3 format=3 uid="uid://72xrfybxaluf"]

[ext_resource type="Script" uid="uid://du2mq7yi2b4ud" path="res://scenes/dialog_control/avatar_control.gd" id="1_a1jkh"]
[ext_resource type="Texture2D" uid="uid://da1mdp21mpny4" path="res://icon.svg" id="2_44hj7"]

[node name="AvatarControl" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 3
script = ExtResource("1_a1jkh")
image = ExtResource("2_44hj7")
avatar_name = "xxx"

[node name="Control" type="Control" parent="."]
layout_mode = 1
anchors_preset = 0
size_flags_horizontal = 4

[node name="AvatarImage" type="Sprite2D" parent="Control"]
unique_name_in_owner = true
texture = ExtResource("2_44hj7")
centered = false

[node name="AvatarName" type="Label" parent="."]
unique_name_in_owner = true
layout_mode = 1
anchors_preset = 1
anchor_left = 1.0
anchor_right = 1.0
offset_left = -28.0
offset_bottom = 23.0
grow_horizontal = 0
size_flags_vertical = 8
text = "xxx"
horizontal_alignment = 1
vertical_alignment = 1
